--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,16 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
     "ws": "^8.18.3"
   },
@@ -20,6 +24,7 @@
     "@types/express": "^4.17.23",
     "@types/node": "^20.10.0",
     "@types/ws": "^8.5.10",
+    "drizzle-kit": "^0.31.4",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
