--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.19",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
     "pg": "^8.16.3",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
