--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.90.2",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.1",
-    "react-cookie": "^8.0.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.1",
     "socket.io": "^4.8.1",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
